Remove unused `Economy`, `PlayerCommandListener`, and `UserAlt` classes; cleanup references and optimize imports; refine character management and database initialization logic.