@@ -9,8 +9,6 @@ import com.zyneonstudios.nerotvlive.projectsbase.objects.CharacterSkin;
 import com.zyneonstudios.nerotvlive.projectsbase.objects.User;
 import com.zyneonstudios.nerotvlive.projectsbase.utils.Communicator;
 import com.zyneonstudios.nerotvlive.projectsbase.utils.Strings;
-import net.md_5.bungee.api.ChatMessageType;
-import net.md_5.bungee.api.chat.TextComponent;
 import net.skinsrestorer.api.SkinsRestorer;
 import net.skinsrestorer.api.SkinsRestorerProvider;
 import net.skinsrestorer.api.property.InputDataResult;
@@ -23,11 +21,14 @@ import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.event.inventory.InventoryCloseEvent;
-import org.bukkit.event.player.PlayerDropItemEvent;
+import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
+@SuppressWarnings({"deprecation"})
 public class InventoryClickListener implements Listener {
 
     SkinsRestorer skinsRestorerAPI = SkinsRestorerProvider.get();
@@ -36,47 +37,54 @@ public class InventoryClickListener implements Listener {
 
     @EventHandler
     public void onClick(InventoryClickEvent e) {
-        Player p = (Player)e.getWhoClicked();
-        User u = Main.getUser(p);
         if(e.getCurrentItem()!=null) {
-            if(e.getCurrentItem().getItemMeta()!=null) {
-                if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.placeholder().getItemMeta().getDisplayName())) {
+            ItemStack item = e.getCurrentItem();
+            if(item.getItemMeta()!=null) {
+                ItemMeta itemMeta = item.getItemMeta();
+                String itemName = itemMeta.getDisplayName();
+                Player p = (Player)e.getWhoClicked();
+                User u = Main.getUser(p);
+                if(itemMeta.getLore()!=null) {
+                    List<String> lore = itemMeta.getLore();
+                    if (!lore.isEmpty()) {
+                        if (lore.getFirst().startsWith("§8zyneon.characterEditor.")) {
+                            e.setCancelled(true);
+                            String number = lore.getFirst().replace("zyneon.characterEditor.", "").replace("§8","");
+                            int index = Integer.parseInt(number);
+                            u.setSelectedCharacter(index);
+                            p.closeInventory();
+                            p.openInventory(InventoryManager.characterEditor(u));
+                            p.playSound(p, Sound.BLOCK_ENDER_CHEST_OPEN, 100, 100);
+                            Communicator.sendInfo(p, "Du bist nun§8: §e" + u.getSelectedCharacter().getName());
+                            Character character = u.getSelectedCharacter();
+                            CharacterSkin skin = character.getSelectedSkin();
+                            try {
+                                Optional<InputDataResult> result = skinStorage.findOrCreateSkinData(skin.getSkinUrl());
+                                if (result.isPresent()) {
+                                    playerStorage.setSkinIdOfPlayer(p.getUniqueId(), result.get().getIdentifier());
+                                    skinsRestorerAPI.getSkinApplier(Player.class).applySkin(p);
+                                }
+                            } catch (Exception ignore) {
+                            }
+                            u.initListName();
+                        }
+                    }
+                } else if(itemName.equals(ItemManager.addCharacter.getItemMeta().getDisplayName())) {
+                    e.setCancelled(true);
+                    u.addNewCharacter();
+                    p.closeInventory();
+                    p.openInventory(InventoryManager.characterList(u));
+                } else if(itemName.equals(ItemManager.placeholder.getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     p.playSound(p.getLocation(),Sound.BLOCK_ANVIL_BREAK,100,100);
-                } else if(u.getInventoryMode().equalsIgnoreCase("deposit")) {
-                    if(e.getCurrentItem().getType().toString().toLowerCase().contains("zyneonsource_mark_")) {
-                        e.setCancelled(true);
-                        int amount = Integer.parseInt(e.getCurrentItem().getType().toString().replace("ZYNEONSOURCE_MARK_", ""));
-                        amount = amount * e.getCurrentItem().getAmount();
-                        e.getCurrentItem().setAmount(0);
-                        u.getPlayer().spigot().sendMessage(ChatMessageType.ACTION_BAR,new TextComponent("§aDu hast "+amount+"§mM§r§a eingezahlt."));
-                        p.playSound(p.getLocation(),Sound.ENTITY_CHICKEN_EGG,100,100);
-                    } else {
-                        e.setCancelled(true);
-                        p.playSound(p.getLocation(),Sound.BLOCK_ANVIL_BREAK,100,100);
-                    }
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.deposit(p).getItemMeta().getDisplayName())) {
-                    e.setCancelled(true);
-                    p.closeInventory();
-                    u.setInventoryMode("deposit");
-                    Communicator.sendInfo(p,"Klicke das Geld an§8,§7 welches zu einzahlen willst§8.");
-                    p.openInventory(InventoryManager.bankerInventory_deposit(p));
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.payout(p).getItemMeta().getDisplayName())) {
-                    e.setCancelled(true);
-                    u.setChatMode("payout");
-                    Communicator.sendWarning(p,"Schreibe \"cancel\" in den Chat, um die Auszahlung abzubrechen.");
-                    Communicator.sendInfo(p,"Schreibe den Betrag§8,§7 den du dir auszahlen lassen willst in den Chat§8.");
-                    p.closeInventory();
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.salary(p).getItemMeta().getDisplayName())) {
-                    e.setCancelled(true);
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.nether(p).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.nether.getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     if(WarpAPI.cooldown.contains(p.getUniqueId())) {
                         Communicator.sendWarning(p,"Warte kurz, bevor du dich teleportierst...");
                         return;
                     }
                     if(u.isGrounded()) {
-                        if(p.getWorld().equals(Bukkit.getWorlds().get(0))) {
+                        if(p.getWorld().equals(Bukkit.getWorlds().getFirst())) {
                             Location silberfels = WarpAPI.getWarp("silberfels").getLocation();
                             Location rincon = WarpAPI.getWarp("rincon").getLocation();
                             int distance_silberfels = (int) silberfels.distance(p.getLocation());
@@ -88,7 +96,7 @@ public class InventoryClickListener implements Listener {
                             }
                         }
                         p.closeInventory();
-                        p.teleport(Bukkit.getWorld("ne1").getSpawnLocation());
+                        p.teleport(Objects.requireNonNull(Bukkit.getWorld("ne1")).getSpawnLocation());
                         p.playSound(p.getLocation(), Sound.ENTITY_CHICKEN_EGG, 100, 100);
                         p.playSound(p.getLocation(), Sound.ENTITY_ENDERMAN_TELEPORT, 100, 100);
                         WarpAPI.startWarpCooldown(p);
@@ -96,14 +104,14 @@ public class InventoryClickListener implements Listener {
                     } else {
                         Communicator.sendError(p,"§cDazu musst du auf §4sicherem Boden§c stehen§8!");
                     }
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.end(p).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.end.getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     if(WarpAPI.cooldown.contains(p.getUniqueId())) {
                         Communicator.sendWarning(p,"Warte kurz, bevor du dich teleportierst...");
                         return;
                     }
                     if(u.isGrounded()) {
-                        if(p.getWorld().equals(Bukkit.getWorlds().get(0))) {
+                        if(p.getWorld().equals(Bukkit.getWorlds().getFirst())) {
                             Location silberfels = WarpAPI.getWarp("silberfels").getLocation();
                             Location rincon = WarpAPI.getWarp("rincon").getLocation();
                             int distance_silberfels = (int) silberfels.distance(p.getLocation());
@@ -115,7 +123,7 @@ public class InventoryClickListener implements Listener {
                             }
                         }
                         p.closeInventory();
-                        p.teleport(Bukkit.getWorld("en1").getSpawnLocation());
+                        p.teleport(Objects.requireNonNull(Bukkit.getWorld("en1")).getSpawnLocation());
                         p.playSound(p.getLocation(), Sound.ENTITY_CHICKEN_EGG, 100, 100);
                         p.playSound(p.getLocation(), Sound.ENTITY_ENDERMAN_TELEPORT, 100, 100);
                         WarpAPI.startWarpCooldown(p);
@@ -123,17 +131,17 @@ public class InventoryClickListener implements Listener {
                     } else {
                         Communicator.sendError(p,"§cDazu musst du auf §4sicherem Boden§c stehen§8!");
                     }
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.close().getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.close.getItemMeta().getDisplayName())) {
                     p.closeInventory();
                     p.playSound(p.getLocation(), Sound.BLOCK_CHEST_CLOSE, 1, 1);
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.farmworld(p).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.farmworld.getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     if(WarpAPI.cooldown.contains(p.getUniqueId())) {
                         Communicator.sendWarning(p,"Warte kurz, bevor du dich teleportierst...");
                         return;
                     }
                     if(u.isGrounded()) {
-                        if(p.getWorld().equals(Bukkit.getWorlds().get(0))) {
+                        if(p.getWorld().equals(Bukkit.getWorlds().getFirst())) {
                             Location silberfels = WarpAPI.getWarp("silberfels").getLocation();
                             Location rincon = WarpAPI.getWarp("rincon").getLocation();
                             int distance_silberfels = (int) silberfels.distance(p.getLocation());
@@ -145,7 +153,7 @@ public class InventoryClickListener implements Listener {
                             }
                         }
                         p.closeInventory();
-                        p.teleport(Bukkit.getWorld(Strings.farmWorldName).getSpawnLocation());
+                        p.teleport(Objects.requireNonNull(Bukkit.getWorld(Strings.farmWorldName)).getSpawnLocation());
                         p.playSound(p.getLocation(), Sound.ENTITY_CHICKEN_EGG, 100, 100);
                         p.playSound(p.getLocation(), Sound.ENTITY_ENDERMAN_TELEPORT, 100, 100);
                         WarpAPI.startWarpCooldown(p);
@@ -153,91 +161,34 @@ public class InventoryClickListener implements Listener {
                     } else {
                         Communicator.sendError(p,"§cDazu musst du auf §4sicherem Boden§c stehen§8!");
                     }
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.characterEditor(u).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.characterEditor_lite.getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     p.openInventory(InventoryManager.characterEditor(u));
                     p.playSound(p,Sound.BLOCK_ENDER_CHEST_OPEN,100,100);
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.characterEditor_name(u).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.characterEditor_name(u).getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     p.closeInventory();
                     u.setChatMode("character_name");
                     Communicator.sendInfo(p,"Schreibe den neuen Namen von deinem Charakter in den Chat§8. §7Schreibe §e\"cancel\"§7 um den Vorgang abzubrechen§8.");
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.character_one(u).getItemMeta().getDisplayName())) {
-                    e.setCancelled(true);
-                    u.setSelectedCharacter(0);
-                    p.closeInventory();
-                    p.openInventory(InventoryManager.characterEditor(u));
-                    p.playSound(p,Sound.BLOCK_ENDER_CHEST_OPEN,100,100);
-                    Communicator.sendInfo(p, "Du bist nun§8: §e"+u.getSelectedCharacter().getName());
-                    Character character = u.getSelectedCharacter();
-                    CharacterSkin skin = character.getSelectedSkin();
-                    try {
-                        Optional<InputDataResult> result = skinStorage.findOrCreateSkinData(skin.getSkinUrl());
-                        if(result.isPresent()) {
-                            playerStorage.setSkinIdOfPlayer(p.getUniqueId(), result.get().getIdentifier());
-                            skinsRestorerAPI.getSkinApplier(Player.class).applySkin(p);
-                        }
-                    } catch (Exception ex) {
-                        ex.printStackTrace();
-                    }
-                    u.initListName();
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.character_two(u).getItemMeta().getDisplayName())) {
-                    e.setCancelled(true);
-                    u.setSelectedCharacter(1);
-                    p.closeInventory();
-                    p.openInventory(InventoryManager.characterEditor(u));
-                    p.playSound(p,Sound.BLOCK_ENDER_CHEST_OPEN,100,100);
-                    Communicator.sendInfo(p, "Du bist nun§8: §e"+u.getSelectedCharacter().getName());
-                    Character character = u.getSelectedCharacter();
-                    CharacterSkin skin = character.getSelectedSkin();
-                    try {
-                        Optional<InputDataResult> result = skinStorage.findOrCreateSkinData(skin.getSkinUrl());
-                        if(result.isPresent()) {
-                            playerStorage.setSkinIdOfPlayer(p.getUniqueId(), result.get().getIdentifier());
-                            skinsRestorerAPI.getSkinApplier(Player.class).applySkin(p);
-                        }
-                    } catch (Exception ex) {
-                        ex.printStackTrace();
-                    }
-                    u.initListName();
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.character_three(u).getItemMeta().getDisplayName())) {
-                    e.setCancelled(true);
-                    u.setSelectedCharacter(2);
-                    p.closeInventory();
-                    p.openInventory(InventoryManager.characterEditor(u));
-                    p.playSound(p,Sound.BLOCK_ENDER_CHEST_OPEN,100,100);
-                    Communicator.sendInfo(p, "Du bist nun§8: §e"+u.getSelectedCharacter().getName());
-                    Character character = u.getSelectedCharacter();
-                    CharacterSkin skin = character.getSelectedSkin();
-                    try {
-                        Optional<InputDataResult> result = skinStorage.findOrCreateSkinData(skin.getSkinUrl());
-                        if(result.isPresent()) {
-                            playerStorage.setSkinIdOfPlayer(p.getUniqueId(), result.get().getIdentifier());
-                            skinsRestorerAPI.getSkinApplier(Player.class).applySkin(p);
-                        }
-                    } catch (Exception ex) {
-                        ex.printStackTrace();
-                    }
-                    u.initListName();
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.characterEditor_job(u).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.characterEditor_job(u).getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     p.closeInventory();
                     u.setChatMode("character_job");
                     Communicator.sendInfo(p,"Schreibe den neuen Job von deinem Charakter in den Chat§8. §7Schreibe §e\"cancel\"§7 um den Vorgang abzubrechen§8.");
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.backEditor().getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.backEditor.getItemMeta().getDisplayName())) {
                     p.closeInventory();
-                    p.openInventory(InventoryManager.characterHome(u));
+                    p.openInventory(InventoryManager.characterHome_lite);
                     p.playSound(p,Sound.BLOCK_CHEST_OPEN,100,100);
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.characterEditor_skin(u).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.characterEditor_skin().getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     p.closeInventory();
                     u.setChatMode("character_variant");
                     Communicator.sendInfo(p,"Schreibe die neue Skin-Variante §8(SLIM oder CLASSIC)§7 von deinem Charakter in den Chat§8. §7Schreibe §e\"cancel\"§7 um den Vorgang abzubrechen§8.");
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.characterList(p).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.characterList_lite.getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     p.openInventory(InventoryManager.characterList(u));
                     p.playSound(p,Sound.BLOCK_ENDER_CHEST_OPEN,100,100);
-                } else if(e.getCurrentItem().getItemMeta().getDisplayName().equals(ItemManager.spawn(p).getItemMeta().getDisplayName())) {
+                } else if(itemName.equals(ItemManager.spawn(p).getItemMeta().getDisplayName())) {
                     e.setCancelled(true);
                     if (WarpAPI.cooldown.contains(p.getUniqueId())) {
                         Communicator.sendWarning(p,"Warte kurz, bevor du dich teleportierst...");
@@ -248,7 +199,7 @@ public class InventoryClickListener implements Listener {
                         p.closeInventory();
                     } else {
                         if (u.isGrounded()) {
-                            if (p.getWorld().equals(Bukkit.getWorlds().get(0))) {
+                            if (p.getWorld().equals(Bukkit.getWorlds().getFirst())) {
                                 p.setLevel(p.getLevel() - 10);
                             }
                             WarpAPI.startWarpCooldown(p);
@@ -263,22 +214,6 @@ public class InventoryClickListener implements Listener {
                     }
                 }
             }
-        }
-    }
-
-    @EventHandler
-    public void onInventoryClose(InventoryCloseEvent e) {
-        User u = Main.getUser(e.getPlayer().getUniqueId());
-        if(u.getInventoryMode().equalsIgnoreCase("deposit")) {
-            Communicator.sendInfo(e.getPlayer(),"Einzahlen beendet§8.");
-        }
-        u.setInventoryMode("normal");
-    }
-
-    @EventHandler
-    public void onItemDrop(PlayerDropItemEvent e) {
-        if(!Main.getUser(e.getPlayer().getUniqueId()).getInventoryMode().equalsIgnoreCase("normal")) {
-            e.setCancelled(true);
         }
     }
 }
